<resources>
    <string name="app_name">RestaurantUpdated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="addToCart">Add to cart</string>
    <string name="itemNameLabel">Name</string>
    <string name="quantityLabel">Quantity(g)</string>
    <string name="priceLabel">Price(lei)</string>
    <string name="ingredeientsLabel">Ingredients</string>
    <string name="total">Total</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="delete_item">Delete item</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="client">Client</string>
    <string name="kitchen">Kitchen</string>
    <string name="administrator">Admin</string>
    <string name="ok">Ok</string>
    <string name="extra_order_information">Extra order information</string>
    <string name="add_new_menu_item">Add new menu item</string>
    <string name="edit_or_remove_menu_item">Edit or remove menu item</string>
    <string name="set_caching_timer">Set caching timer</string>
    <string name="action_pannel">Action pannel</string>
    <string name="admin">Admin</string>
    <string name="hour">h:</string>
    <string name="minute">m:</string>
    <string name="seconds">s:</string>
    <string name="zero">0</string>
    <string name="set">SET</string>
    <string name="current_day_income">Current day income</string>
    <string name="current_month_vs_last_month">Current month vs last month</string>
</resources>