<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actionsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.AdminActionsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="@dimen/zero_dp"
                app:navigationIcon="@drawable/ic_add_new_menu_item"
                app:title="@string/administrator" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/hoursLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_margin_start"
            android:layout_marginTop="@dimen/admin_action_layout_margin_top"
            android:layout_marginEnd="@dimen/password_marginTop"
            android:text="@string/hour"
            app:layout_constraintEnd_toStartOf="@+id/hours"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <TextView
            android:id="@+id/minutesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_margin_start2"
            android:layout_marginTop="@dimen/admin_action_layout_margin_top"
            android:layout_marginEnd="@dimen/password_marginTop"
            android:text="@string/minute"
            app:layout_constraintEnd_toStartOf="@+id/minutes"
            app:layout_constraintStart_toEndOf="@+id/hours"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <TextView
            android:id="@+id/secondsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_margin_start2"
            android:layout_marginTop="@dimen/admin_action_layout_margin_top"
            android:layout_marginEnd="@dimen/password_marginTop"
            android:text="@string/seconds"
            app:layout_constraintEnd_toStartOf="@+id/minutes"
            app:layout_constraintStart_toEndOf="@+id/seconds"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />


        <!-- make this to use only numbers(different widget)-->
        <EditText
            android:id="@+id/hours"
            android:layout_width="@dimen/admin_action_layout_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_margin_start3"
            android:layout_marginTop="@dimen/card_view_layout_height"
            android:gravity="center"
            android:inputType="number"
            android:text="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/seconds"
            android:layout_width="@dimen/admin_action_layout_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_width"
            android:layout_marginTop="@dimen/card_view_layout_height"
            android:layout_marginEnd="@dimen/admin_action_layout_margin_start3"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/minutes"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="@dimen/admin_action_layout_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/admin_action_layout_width"
            android:layout_marginTop="@dimen/card_view_layout_height"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/zero"
            app:layout_constraintStart_toEndOf="@+id/hours"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/setTime"
            android:layout_width="@dimen/admin_action_layout_width2"
            android:layout_height="@dimen/admin_action_layout_width"
            android:text="@string/set"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seconds"
            app:layout_constraintVertical_bias="0.277" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
